Boolean Modifier on Exact mode crashes blender #87682

Closed
opened 2021-04-21 15:31:25 +02:00 by wueo · 15 comments

System Information
Operating system: Linux-5.11.12-rt11-xanmod1-1-rt-x86_64-with-glibc2.33 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 465.24.02

Blender Version
Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-04-20 15:45, hash: 3735986e87
Worked: (newest version of Blender that worked as expected)

Short description of error
blender crashes when having boolean modifier on exact mode only on this object

Exact steps for others to reproduce the error
just open this file and click on exact
crash boolean exact.blend

crash boolean exact.crash.txt

**System Information** Operating system: Linux-5.11.12-rt11-xanmod1-1-rt-x86_64-with-glibc2.33 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 465.24.02 **Blender Version** Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-04-20 15:45, hash: `3735986e87` Worked: (newest version of Blender that worked as expected) **Short description of error** blender crashes when having boolean modifier on exact mode only on this object **Exact steps for others to reproduce the error** just open this file and click on exact [crash boolean exact.blend](https://archive.blender.org/developer/F10031335/crash_boolean_exact.blend) [crash boolean exact.crash.txt](https://archive.blender.org/developer/F10031336/crash_boolean_exact.crash.txt)
Author

Added subscriber: @mushroomeo

Added subscriber: @mushroomeo

Added subscriber: @slumber

Added subscriber: @slumber
Member

Added subscribers: @howardt, @HDMaster84

Added subscribers: @howardt, @HDMaster84
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

System Information
Operating system: Linux-5.8.0-2-amd64-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.66

Blender Version
Broken: version: 3.0.0 Alpha, commit date: 2021-04-20 14:00, hash: 847579b422
Worked: 2.92.0 Release

Seems to be a regression. What do you think @howardt ?

Can confirm. **System Information** Operating system: Linux-5.8.0-2-amd64-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.66 **Blender Version** Broken: version: 3.0.0 Alpha, commit date: 2021-04-20 14:00, hash: `847579b422` Worked: 2.92.0 Release Seems to be a regression. What do you think @howardt ?

Added subscriber: @Helge-4

Added subscriber: @Helge-4

I can reproduce the issue with this file on Windows 10 using the latest beta:
System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Intel(R) HD Graphics 620 Intel 4.5.0 - Build 27.20.100.8681

Blender Version
Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-04-21 20:15, hash: 0f66dbea90

A few things I noticed:

1.) It did not crash with: blender-2.93.0-6776b74d0a67-windows64, this seems to be something rather new.

2.) Not sure if this is connected (I'm beginning to think that this might be a separate issue. ), but if you try to apply the Solidify Modifier (using the menu and clicking Apply), the Boolean Modifier is applied instead. However, using the shortcut (Ctrl+A) works fine. (Btw. "Move to First" and "Move to Last" also don't seem to work on this Solidify Modifier.)
Edit: I think this has already been tackled in: https://developer.blender.org/T87401

3.) If you apply the Solidify Modifier (using the shortcut), Blender still crashes when switching the Boolean Modifier to Exact, afterwards.

4.) If you place a Triangulate Modifier between the Solidify and the Boolean Modifier, Blender does not crash.

I can reproduce the issue with this file on Windows 10 using the latest beta: **System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Intel(R) HD Graphics 620 Intel 4.5.0 - Build 27.20.100.8681 **Blender Version** Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-04-21 20:15, hash: `0f66dbea90` A few things I noticed: 1.) It did not crash with: blender-2.93.0-6776b74d0a67-windows64, this seems to be something rather new. ~~2.) Not sure if this is connected (I'm beginning to think that this might be a separate issue. ), but if you try to apply the Solidify Modifier (using the menu and clicking Apply), the Boolean Modifier is applied instead. However, using the shortcut (Ctrl+A) works fine. (Btw. "Move to First" and "Move to Last" also don't seem to work on this Solidify Modifier.)~~ Edit: I think this has already been tackled in: https://developer.blender.org/T87401 3.) If you apply the Solidify Modifier (using the shortcut), Blender still crashes when switching the Boolean Modifier to Exact, afterwards. 4.) If you place a Triangulate Modifier between the Solidify and the Boolean Modifier, Blender does not crash.
Member

It does crash on 2.93.0 Beta, branch: master, commit date: 2021-04-21 20:15, hash: 0f66dbea90 on Linux (tested as well right now).

I tried setting the solidify to simple (with even thickness) instead of complex with no change. I also tries applying solidify and toggling edit mode on and off to validate the mesh with no result. So the issue seems to really be the Boolean here.

It does crash on 2.93.0 Beta, branch: master, commit date: 2021-04-21 20:15, hash: `0f66dbea90` on Linux (tested as well right now). I tried setting the solidify to simple (with even thickness) instead of complex with no change. I also tries applying solidify and toggling edit mode on and off to validate the mesh with no result. So the issue seems to really be the Boolean here.
Howard Trickey self-assigned this 2021-04-24 17:30:33 +02:00
Member

Working on this now.

Working on this now.

This issue was referenced by c96f9bd340

This issue was referenced by c96f9bd340004e8d6750764ac80da0c3f92cdf5d

This issue was referenced by f7afd78b80

This issue was referenced by f7afd78b80e5649a9fb7e19cf42e842b2429e721
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

System Information
Operating system: macOS-13.2.1-arm64-arm-64bit 64 Bits
Graphics card: Apple M1 Pro Apple 4.1 Metal - 83

Blender Version
Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: rB55485cb379f7
Worked: (newest version of Blender that worked as expected)

Short description of error

crashes after short time of moving or scaling boolean object in exact mode (in fast everything ok).

Exact steps for others to reproduce the error
try to move boolean object with G.

**System Information** Operating system: macOS-13.2.1-arm64-arm-64bit 64 Bits Graphics card: Apple M1 Pro Apple 4.1 Metal - 83 **Blender Version** Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: `rB55485cb379f7` Worked: (newest version of Blender that worked as expected) **Short description of error** crashes after short time of moving or scaling boolean object in exact mode (in fast everything ok). **Exact steps for others to reproduce the error** try to move boolean object with G.
Member

I tried this file myself on my Mac which is similar but not identical, and could not get this to crash by moving the Icosphere.003 object with G.
My OS is MacOs 13.3, my hardware is Apple M1 Max, Metal 3.
Does any other develper have the same hardware as that of the reporter, and if so, can they reproduce the problem?

We had crashes on some Apple silicon a few months ago which we traced to the multiprecision library (GMP) seeming to be buggy on that hardward. Switching to the generic C version of GMP seemed to have fixed the problem. I hope that the new release of Blender hasn't inadvertently gone back to the arm-specific version of GMP.

I tried this file myself on my Mac which is similar but not identical, and could not get this to crash by moving the Icosphere.003 object with G. My OS is MacOs 13.3, my hardware is Apple M1 Max, Metal 3. Does any other develper have the same hardware as that of the reporter, and if so, can they reproduce the problem? We had crashes on some Apple silicon a few months ago which we traced to the multiprecision library (GMP) seeming to be buggy on that hardward. Switching to the generic C version of GMP seemed to have fixed the problem. I hope that the new release of Blender hasn't inadvertently gone back to the arm-specific version of GMP.

After Blender update everything works fine! Thank you for attention!

After Blender update everything works fine! Thank you for attention!
Sign in to join this conversation.
7 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#87682
No description provided.